Update fly.toml with processes section

--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ primary_region = 'lhr'
 [processes]
 app = "python main.py"
 
-[http_service]
+[services]
   internal_port = 8080
   force_https = true
   auto_stop_machines = 'stop'
