--- a/.github/workflows/fly-deploy.yml
+++ b/.github/workflows/fly-deploy.yml
@@ -1,23 +1,24 @@
-name: Fly Deploy
+name: Deploy to Fly.io
 
 on:
   push:
     branches:
-      - main   # or your deployment branch
+      - main  # Change if you use a different branch
 
 jobs:
   deploy:
-    name: Deploy app to Fly.io
     runs-on: ubuntu-latest
-    concurrency: deploy-group   # ensures only one deploy runs at a time
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up flyctl
-        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Install Flyctl
+        run: |
+          curl -L https://fly.io/install.sh | sh
+          echo "$HOME/.fly/bin" >> $GITHUB_PATH
 
-      - name: Deploy to Fly.io
+      - name: Deploy with Fly.io
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
         run: flyctl deploy --remote-only
