--- a/fly.toml
+++ b/fly.toml
@@ -1,7 +1,4 @@
 # fly.toml app configuration file generated for ineptbot on 2025-06-26T03:47:58+01:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
 
 app = 'ineptbot'
 primary_region = 'lhr'
@@ -18,6 +15,14 @@ primary_region = 'lhr'
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
+
+  [[http_service.ports]]
+    port = 80
+    handlers = ["http"]
+
+  [[http_service.ports]]
+    port = 443
+    handlers = ["tls", "http"]
 
 [[vm]]
   memory = '1gb'
