--- a/fly.toml
+++ b/fly.toml
@@ -9,6 +9,9 @@ primary_region = 'lhr'
 [env]
   PORT = '8080'
 
+[processes]
+  app = "python main.py"
+
 [http_service]
   internal_port = 8080
   force_https = true
