--- a/fly.toml
+++ b/fly.toml
@@ -18,6 +18,7 @@ primary_region = 'lhr'
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
+  processes = ["app"]  # 👈 This line links the service to your defined process
 
   [[http_service.ports]]
     port = 80
