--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,15 @@
 # fly.toml app configuration file for ineptbot
 
-app = 'ineptbot'
-primary_region = 'lhr'
+app = "ineptbot"
+primary_region = "lhr"
 
 [build]
-  builder = 'paketobuildpacks/builder:base'
+  builder = "paketobuildpacks/builder:base"
+  [build.env]
+    PYTHON_VERSION = "3.11.*"
 
 [env]
-  PORT = '8080'
+  PORT = "8080"
 
 [processes]
   app = "python main.py"
@@ -15,9 +17,9 @@ primary_region = 'lhr'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = false      # ✅ Keep app running even when idle
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 1        # ✅ Ensure at least one machine stays up
+  min_machines_running = 1
   processes = ["app"]
 
   [[http_service.ports]]
@@ -29,8 +31,8 @@ primary_region = 'lhr'
     handlers = ["tls", "http"]
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
+  memory = "1gb"
+  cpu_kind = "shared"
   cpus = 1
 
 [checks]
